[tool.poetry]
name = "pelco"
version = "0.1.0"
description = "Pelco-D Protocol Implementation"
authors = ["p"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
black = "^22.10.0"
pytest = "^7.2.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
